*6434* Introduced grid and listbuilder sorting

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -113,8 +113,7 @@ div.pkp_controllers_grid {
 	}
 
 	.row_file {
-		width: 100%;
-		background-color: #fff;
+		width: 100%;		
 	}
 
 	.row_file a {
@@ -145,7 +144,8 @@ div.pkp_controllers_grid {
 		color: #777;
 		font-size: 90%;
 	}
-
+	
+	
 	.row_controls a:hover {
 		text-decoration: underline;
 	}
@@ -232,4 +232,13 @@ div.pkp_controllers_grid {
 	.visible {
 		display: block;
 	}
+	
+	.grid_controls {
+  		padding: 5px;
+  		height:26px;
+	}
+	
+	.ordering:hover {
+		background: #EAF3F8 !important;  
+	} 
 }
