*7087* Adding notes_new notes_none reset_default sprites

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -143,8 +143,8 @@ a.sprite {
 	&.grid_view:before { margin-right:4px; background-position: -1176px 0; }
 	&.grid_view:hover:before { background-position: -1176px -24px; }
 	
-	&.catalog_entry:before { margin-right:4px; background-position: -1248px 0; }
-	&.catalog_entry:hover:before { background-position: -1248px -24px; }
+	&.reset_default:before { margin-right:4px; background-position: -1248px 0; }
+	&.reset_default:hover:before { background-position: -1248px -24px; }
 	
 }
 
