*6924* Overflow on subsequent lines hidden for first column in grid

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -91,12 +91,14 @@ div.pkp_controllers_grid {
 
 	.row_container {
 		position: relative; /* Required to anchor absolute row actions positioning below. */
+		padding-top: 10px;
 		padding-left: 40px;
 		padding-right: 30px;
 		overflow: hidden;
 		height: 40px;
-		min-height: 40px;
-		line-height: 40px;
+		word-wrap: break-word;
+		/* min-height: 40px; */
+		line-height: auto;
 		vertical-align: middle;
 	}
 
