*7375* make linkAction style more specific

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -121,7 +121,7 @@ div.pkp_controllers_grid {
 		width: 100%;		
 	}
 
-	.row_file a {
+	.row_file a.pkp_controllers_linkAction {
 		float:left;
 		margin-right: 20px;
 	}
