*6924* Overflow on subsequent lines hidden for first column in grid

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -95,9 +95,8 @@ div.pkp_controllers_grid {
 		padding-left: 40px;
 		padding-right: 30px;
 		overflow: hidden;
-		height: 40px;
-		word-wrap: break-word;
-		/* min-height: 40px; */
+		min-height: 40px;
+		height: auto;
 		line-height: auto;
 		vertical-align: middle;
 	}
@@ -105,6 +104,7 @@ div.pkp_controllers_grid {
 	.row_container .row_actions {
 		position: absolute;
 		width: 24px;
+		height: 200px;
 	}
 
 	.row_actions {
@@ -118,12 +118,13 @@ div.pkp_controllers_grid {
 	}
 
 	.row_file {
-		width: 100%;		
+		width: 100%;
 	}
 
 	.row_file a.pkp_controllers_linkAction {
 		float:left;
 		margin-right: 20px;
+		margin-top: 10px;
 	}
 
 	.multiline {
@@ -139,7 +140,7 @@ div.pkp_controllers_grid {
 	.row_controls td {
 		padding-left: 30px;
 		line-height: 25px;
-   		height: 25px;
+		height: 25px;
 	}
 
 	.row_controls a {
