*7380* Send to Production icon missing

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -146,6 +146,9 @@ a.sprite {
 	&.reset_default:before { margin-right:4px; background-position: -1248px 0; }
 	&.reset_default:hover:before { background-position: -1248px -24px; }
 	
+	&.send_production:before { margin-right:4px; background-position: -1272px 0; }
+	&.send_production:hover:before { background-position: -1272px -24px; }
+	
 }
 
 
