*7399* Create icon for ordering items

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -149,6 +149,9 @@ a.sprite {
 	&.send_production:before { margin-right:4px; background-position: -1272px 0; }
 	&.send_production:hover:before { background-position: -1272px -24px; }
 	
+	&.order_items:before { margin-right:4px; background-position: -1296px 0; }
+	&.order_items:hover:before { background-position: -1296px -24px; }
+	
 }
 
 
