*6932* Introduced multiple lists listbuilder

--- a/pkp-lib/styles/controllers/listbuilder/listbuilder.less
+++ b/pkp-lib/styles/controllers/listbuilder/listbuilder.less
@@ -34,4 +34,10 @@ div.pkp_controllers_listbuilder {
 		background-position:100% 50%;
 		padding: 2px 30px 2px 0px;
 	}
+	
+	.list_wrapper {
+		padding:2px;
+		display:inline-block;
+		vertical-align:top;
+	}
 }
