--- a/pkp-lib/styles/helpers.less
+++ b/pkp-lib/styles/helpers.less
@@ -77,8 +77,16 @@
 	cursor: move;
 }
 
+.pkp_helpers_full {
+	width: 100%;
+}
+
 .pkp_helpers_half {
 	width: 48%;
+}
+
+.pkp_helpers_third {
+	width: 31%;
 }
 
 .pkp_helpers_quarter {
