*7400* Need a sprite for return to previous page (css)

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -152,6 +152,9 @@ a.sprite {
 	&.order_items:before { margin-right:4px; background-position: -1296px 0; }
 	&.order_items:hover:before { background-position: -1296px -24px; }
 	
+	&.return:before { margin-right:4px; background-position: -1320px 0; }
+	&.return:hover:before { background-position: -1320px -24px; }
+	
 }
 
 
