*7238* fix listbuilder delete icon

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -68,8 +68,8 @@ a.sprite {
 	&.add_item:before { margin-right:4px; background-position: -576px 0; }
 	&.add_item:hover:before { background-position: -576px -24px; }
 
-	&.remove_item:before { background-position: -600px 0; }
-	&.remove_item:hover:before { background-position: -600px -24px; }
+	&.remove_item:before { background-position: -600px 0; margin-top: 8px; }
+	&.remove_item:hover:before { background-position: -600px -24px; margin-top: 8px; }
 
 	&.decline:before { margin-right:4px; background-position: -624px 0; }
 	&.decline:hover:before { background-position: -624px -24px; }
