--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -169,7 +169,7 @@ div.pkp_controllers_grid {
 		background-position: 50% 50%;
 		background-repeat: no-repeat;
 		margin: 0;
-		padding: 0;
+		padding-top: 5px;
 	}
 
 	/* Below was taken from the theme */
