*7416* add padding to 'empty grid' message

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -25,6 +25,10 @@ div.pkp_controllers_grid {
 		border-bottom: 1px solid #c8c7c7;
 	}
 
+	tbody.empty td {
+		padding-left: 10px;
+	}
+	
 	thead tr {
 		height: 30px; /* Must be set for tr rather than th for Chromium. */
 		padding: 4px 0;
