*7416* Adapted listbuilders to evokes design

--- a/pkp-lib/styles/controllers/listbuilder/listbuilder.less
+++ b/pkp-lib/styles/controllers/listbuilder/listbuilder.less
@@ -10,6 +10,11 @@
  */
 
 div.pkp_controllers_listbuilder {
+	
+	thead, tr.gridRow, tr.empty {
+		border-bottom: 1px solid #c8c7c7;
+	}
+
 	/**
 	 * Editable grid row styles
 	 */
