*7415* CSS tweak to select boxes and sidebar block titles

--- a/pkp-lib/styles/structure/sidebar.less
+++ b/pkp-lib/styles/structure/sidebar.less
@@ -18,6 +18,17 @@
 	padding-top: 10px;
 	border-top: 1px dotted #999;
 	margin-right: 20px;
+
+	span.blockTitle {
+		font: 120% "Courier New",Courier,mono;
+		text-transform: uppercase;
+		color: #569bbe;
+		line-height: 40px;
+	}
+
+	span.blockTitle:before {
+		content: "\2219 ";
+	}
 }
 
 .pkp_structure_sidebar_left {
