--- a/pkp-lib/styles/controllers/notification.less
+++ b/pkp-lib/styles/controllers/notification.less
@@ -24,7 +24,12 @@
 	}
 	
 	p {
-		display: inline-block;
+		display: inline;
+	}
+	
+	h4 {
+		display: inline;
+		padding-right: 0px;
 	}
 	
 	.pkp_linkActions {
@@ -34,37 +39,25 @@
  	/* -- Iconography: http://www.jankoatwarpspeed.com/post/2009/09/17/sixpack-status-icons.aspx --*/
 	.notifySuccess {
 		background: #daf0da url(../lib/pkp/templates/images/structure/response_success.png);
-		border-top: 1px solid #5abd5a;
-		border-bottom: 1px solid #5abd5a;
 	}
 	
 	.notifyWarning {
 		background: #FFFAE1 url(../lib/pkp/templates/images/structure/response_warning.png);
-		border-top: 1px solid #ffd324;
-		border-bottom: 1px solid #ffd324;
 	}
 	
 	.notifyError, .notifyFormError {
 		background: #f8dada url(../lib/pkp/templates/images/structure/response_error.png);
-		border-top: 1px solid #e68080;
-		border-bottom: 1px solid #e68080;
 	}
 	
 	.notifyForbidden {
 		background: #f8dada url(../lib/pkp/templates/images/structure/response_forbidden.png);
-		border-top: 1px solid #e68080;
-		border-bottom: 1px solid #e68080;
 	}
 	
 	.notifyInformation {
 		background: #c9e3f8 url(../lib/pkp/templates/images/structure/response_info.png);
-		border-top: 1px solid #6aa6d6;
-		border-bottom: 1px solid #6aa6d6;
 	}
 	
 	.notifyHelp {
 		background: #c9e3f8 url(../lib/pkp/templates/images/structure/response_help.png);
-		border-top: 1px solid #6aa6d6;
-		border-bottom: 1px solid #6aa6d6;
 	}	
  }
