Fixed in place notification height

--- a/pkp-lib/styles/controllers/notification.less
+++ b/pkp-lib/styles/controllers/notification.less
@@ -21,6 +21,7 @@
  		background-position: 15px 50% !important;
 		background-repeat: no-repeat !important;
 		padding: 5px 20px 5px 60px;
+		min-height: 30px;
 	}
 	
 	p {
