*7414* Fixed new request review icon

--- a/pkp-lib/styles/controllers/grid/icons.less
+++ b/pkp-lib/styles/controllers/grid/icons.less
@@ -38,6 +38,10 @@
 	a.uploaded {
 		background-image: url(../lib/pkp/templates/images/structure/grid_folder.png);
 	}
+	
+	a.request_review {
+		background-image: url(../lib/pkp/templates/images/structure/grid_request_review.png);
+	}	
 
 	div.checked {
 		background-image: url(../lib/pkp/templates/images/structure/grid_promote.png);
