*7439* float grid header actions via style class

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -98,6 +98,10 @@ div.pkp_controllers_grid {
 		padding-top:5px;
 		vertical-align:middle;
 	}
+	
+	.grid_header_bar a {
+		float:left;
+	}
 
 	.options {
 		float: right;
