*7453* Sprite icon for new releases

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -154,8 +154,14 @@ a.sprite {
 	
 	&.return:before { margin-right:4px; background-position: -1320px 0; }
 	&.return:hover:before { background-position: -1320px -24px; }
-}
 
+	&.release:before { margin-right:4px; background-position: -1344px 0; }
+	&.release:hover:before { background-position: -1344px -24px; }
+
+	&.release_highlight:before { margin-right:4px; background-position: -1368px 0; } 
+	&.release_highlight:hover:before { background-position: -1368px -24px; }
+
+}
 
 /**
  * Category sprites
