*7457* Create Icons for expand all/collapse all link actions

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -155,12 +155,18 @@ a.sprite {
 	&.return:before { margin-right:4px; background-position: -1320px 0; }
 	&.return:hover:before { background-position: -1320px -24px; }
 
-	&.release:before { margin-right:4px; background-position: -1344px 0; }
-	&.release:hover:before { background-position: -1344px -24px; }
+	&.release:before { margin-right:4px; background-position: -1368px 0; }
+	&.release:hover:before { background-position: -1368px -24px; }
 
-	&.release_highlight:before { margin-right:4px; background-position: -1368px 0; } 
-	&.release_highlight:hover:before { background-position: -1368px -24px; }
-
+	&.release_highlight:before { margin-right:4px; background-position: -1392px 0; }
+	&.release_highlight:hover:before { background-position: -1392px -24px; }
+	
+	&.collapse_all:before { margin-right:4px; background-position: -1416px 0; }
+	&.collapse_all:hover:before { background-position: -1416px -24px; }
+	
+	&.expand_all:before { margin-right:4px; background-position: -1440px 0; }
+	&.expand_all:hover:before { background-position: -1440px -24px; }
+	
 }
 
 /**
