*7418* Part 1 - Adapt accordions based on Evoke's work

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -167,6 +167,12 @@ a.sprite {
 	&.expand_all:before { margin-right:4px; background-position: -1440px 0; }
 	&.expand_all:hover:before { background-position: -1440px -24px; }
 	
+	&.expanded:before { margin-right:4px; background-position: -1464px 0; }
+	&.expanded:hover:before { background-position: -1464px -24px; }
+	
+	&.collapsed:before { margin-right:4px; background-position: -1488px 0; }
+	&.collapsed:hover:before { background-position: -1488px -24px; }
+	
 }
 
 /**
