--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -134,8 +134,8 @@ a.sprite {
 	&.cross:before { margin-right:4px; background-position: -1104px 0; }
 	&.cross:hover:before { background-position: -1104px -24px; }
 
-	&.organize:before { margin-right:4px; background-position: -1128px 0; }
-	&.organize:hover:before { background-position: -1128px -24px; }
+	&.feature:before { margin-right:4px; background-position: -1128px 0; }
+	&.feature:hover:before { background-position: -1128px -24px; }
 
 	&.list_view:before { margin-right:4px; background-position: -1152px 0; }
 	&.list_view:hover:before { background-position: -1152px -24px; }
@@ -158,8 +158,8 @@ a.sprite {
 	&.release:before { margin-right:4px; background-position: -1368px 0; }
 	&.release:hover:before { background-position: -1368px -24px; }
 
-	&.release_highlight:before { margin-right:4px; background-position: -1392px 0; }
-	&.release_highlight:hover:before { background-position: -1392px -24px; }
+	&.release_highlighted:before { margin-right:4px; background-position: -1392px 0; } 
+	&.release_highlighted:hover:before { background-position: -1392px -24px; }
 	
 	&.collapse_all:before { margin-right:4px; background-position: -1416px 0; }
 	&.collapse_all:hover:before { background-position: -1416px -24px; }
