*7530* Indent no items rows inside categories

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -21,7 +21,7 @@ div.pkp_controllers_grid {
 		width: 100%;
 	}
 
-	thead, tr.gridRow td, tr.row_controls td, tr.category, .empty tr {
+	thead, tr.gridRow td, tr.row_controls td, tr.category, .empty td {
 		border-bottom: 1px solid #c8c7c7;
 	}
 	
@@ -31,6 +31,7 @@ div.pkp_controllers_grid {
 
 	tbody.empty td {
 		padding-left: 10px;
+		text-align: left;
 	}
 	
 	thead tr {
