*7517* Inserted class to use icon

--- a/pkp-lib/styles/controllers/grid/icons.less
+++ b/pkp-lib/styles/controllers/grid/icons.less
@@ -48,4 +48,9 @@
 		height: 15px;
 		width: 15px;
 	}
+	div.notChecked {
+		background-image: url(../lib/pkp/templates/images/structure/grid_delete.png);
+		height: 15px;
+		width: 15px;
+	}
 }
