Breadcrumb style tweaks

--- a/pkp-lib/styles/structure/navigation.less
+++ b/pkp-lib/styles/structure/navigation.less
@@ -55,7 +55,7 @@
 }
 
 .pkp_structure_breadcrumb li {
-	padding: 10px 2px 0 2px;
+	padding: 10px 6px 0 2px;
 	font-size: 85%;
 	list-style-type: square;
 	list-style-position: inside;
@@ -63,4 +63,5 @@
 
 .pkp_structure_breadcrumb li.no_bullet {
 	list-style-type: none;
+	margin-right: -6px;
 }
