--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -26,7 +26,7 @@ a.sprite {
 	&.notify:before { margin-right:4px; background-position: -24px 0; }
 	&.notify:hover:before { background-position: -24px -24px; }
 
-	&.settings:before { margin-top: 8px; background-position: -408px 0; }
+	&.settings:before { margin: 8px; background-position: -408px 0; }
 	&.settings:hover:before { background-position: -408px -24px; }
 
 	&.information:before { background-position: -194px 0; }
