--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -25,6 +25,10 @@ div.pkp_controllers_grid {
 		border-bottom: 1px solid #c8c7c7;
 	}
 	
+	tr.gridRow td {
+		height: 40px;
+	}
+	
 	tr.category {
 		border-top: 1px solid #c8c7c7;
 	}
@@ -203,7 +207,7 @@ div.pkp_controllers_grid {
 
 	a.task {
 		width: 100%;
-		height: 100%;
+		min-height: 40px;
 		text-indent: -1500px;
 		overflow: hidden;
 		display: block;
