Add css hack for Chrome related to grid row actions

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -153,6 +153,7 @@ div.pkp_controllers_grid {
 	.row_actions a {
 		display: block;
 		cursor: pointer;
+		float: left; /* Need this for Chrome to render links correctly. */
 	}
 
 	.row_file {
