Fixed row actions icons position

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -155,6 +155,14 @@ div.pkp_controllers_grid {
 		cursor: pointer;
 		float: left; /* Need this for Chrome to render links correctly. */
 	}
+	
+	.row_actions a:before {
+		margin: 8px;
+	}
+	
+	.category .row_actions a:before {
+		margin: 0px;
+	}
 
 	.row_file {
 		position: absolute;
