Made empty grid rows selector more general to reach listbuilders

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -33,7 +33,7 @@ div.pkp_controllers_grid {
 		border-top: 1px solid #c8c7c7;
 	}
 
-	tbody.empty td {
+	.empty td {
 		padding-left: 10px;
 		text-align: left;
 		height: 40px;
