Fixed ordering placeholder style in chrome

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -297,8 +297,11 @@ div.pkp_controllers_grid {
 		width: 40px;
 	}
 	
-	tbody.ui-sortable-placeholder {
-		display:block;
+	tbody .ui-sortable-placeholder {
+		display: block;
+		visibility: visible !important;
+		height: 40px;
+		background-color: #EAF3F8 !important;
 	}
 	
 	tbody.ui-sortable-helper {
