--- a/pkp-lib/styles/linkActions.less
+++ b/pkp-lib/styles/linkActions.less
@@ -26,4 +26,8 @@
 	a.enable {
 		background-image: url(../lib/pkp/templates/images/structure/grid_promote.png);
 	}
+
+	a {
+		display: inline-block;
+	}
 }
