*7633* show spinner during form submissions

--- a/pkp-lib/styles/form/form.less
+++ b/pkp-lib/styles/form/form.less
@@ -222,6 +222,16 @@
 		background-position:100% 50%;
 	}
 
+	div.progressIndicator {
+		width:24px;
+		height:24px;
+		float:right;
+		margin-right: 5px;
+		background-repeat:no-repeat;
+		background:url(../lib/pkp/templates/images/throbber.gif) no-repeat;
+		display: none;
+	}
+
 	textarea.localizable {
 		background-position: 100% 0;
 	}
