*7633* show spinner during wizard progress

--- a/pkp-lib/styles/helpers.less
+++ b/pkp-lib/styles/helpers.less
@@ -96,3 +96,13 @@
 .pkp_helpers_quarter {
 	width: 25%;
 }
+
+div.pkp_helpers_progressIndicator {
+	width:24px;
+	height:24px;
+	float:right;
+	margin-right: 5px;
+	background-repeat:no-repeat;
+	background:url(../lib/pkp/templates/images/throbber.gif) no-repeat;
+	display: none;
+}
