*7516* use better icon for checked status

--- a/pkp-lib/styles/controllers/grid/icons.less
+++ b/pkp-lib/styles/controllers/grid/icons.less
@@ -44,9 +44,11 @@ a.request_review {
 
 .pkp_controllers_grid {
 	div.checked {
-		background-image: url(../lib/pkp/templates/images/structure/grid_promote.png);
-		height: 15px;
-		width: 15px;
+		background:url(../lib/pkp/templates/images/structure/sprites.png);
+		background-repeat:no-repeat;
+		height:24px;
+		width:24px;
+		background-position:-672px 0;
 	}
 	div.notChecked {
 		background-image: url(../lib/pkp/templates/images/structure/grid_delete.png);
