--- a/pkp-lib/styles/helpers.less
+++ b/pkp-lib/styles/helpers.less
@@ -97,6 +97,10 @@
 	width: 25%;
 }
 
+.pkp_helpers_underline {
+	text-decoration: underline !important;
+}
+
 div.pkp_helpers_progressIndicator {
 	width:24px;
 	height:24px;
