*7648* Make font and padding smaller to acomodate back the catalog and new releases links in menu

--- a/pkp-lib/styles/structure/navigation.less
+++ b/pkp-lib/styles/structure/navigation.less
@@ -38,7 +38,11 @@
 
 .pkp_structure_head_localNav {
 	text-transform: uppercase;
-	font: 130% "Courier New", Courier, mono;
+	font: 115% "Courier New", Courier, mono;
+}
+
+.pkp_structure_head_localNav .sf-menu a {
+	padding-right:1.1em;
 }
 
 .pkp_structure_search {
