--- a/pkp-lib/styles/structure/head.less
+++ b/pkp-lib/styles/structure/head.less
@@ -15,6 +15,18 @@
 
 	.pkp_structure_masthead {
 		background-color: #fff;
-		height: 90px;
+		height: 100px;
+		padding: 0 5px 5px;
+		border-style: none solid solid;
+		border-width: medium 1px 1px;
+		border-color: #c8c8c8;
+	}
+	
+	.pkp_structure_masthead h1 {
+		height: 99px;
+		border-style: none dotted dotted;
+		border-width: medium 1px 1px;
+		border-color: #818181;
+		overflow: hidden;
 	}
 }
