*7648* Made underline thicker

--- a/pkp-lib/styles/helpers.less
+++ b/pkp-lib/styles/helpers.less
@@ -97,8 +97,10 @@
 	width: 25%;
 }
 
-.pkp_helpers_underline {
-	text-decoration: underline !important;
+.pkp_helpers_underline:after {
+	border: 1px solid white;
+	content: " ";
+	display: block;
 }
 
 div.pkp_helpers_progressIndicator {
