*7415* Applied patch from Chris - mostly header

--- a/pkp-lib/styles/index.less
+++ b/pkp-lib/styles/index.less
@@ -33,12 +33,12 @@
 	
 	a {
 		padding:0;
-		margin:0 -3px 0 0;
 		/**
 		 * FIXME: !important elements needed in the event CSS
 		 * application order vis-a-vis jQueryUI is reversed (see
 		 * editor decision actions on review interface in OMP)
 		 */
+		margin:0 -3px 0 0 !important;
 		border-style: none !important;
 		border-color: white !important;
 		border-width: 0 0 0 0 !important;
