--- a/pkp-lib/styles/structure/navigation.less
+++ b/pkp-lib/styles/structure/navigation.less
@@ -13,12 +13,15 @@
 }
 
 .pkp_structure_head_siteNav {
-	height: 39px;
-	padding: 2px 0 0 0;
 	border-bottom: 1px solid;
 	font-size: 90%;
-	line-height: 30px;
 	color: #fff;
+	overflow: auto;
+	width: 100%;
+
+	.pkp_helpers_flatlist {
+		margin-top: 10px;
+	}
 
 	li {
 		padding-left: 20px;
@@ -42,11 +45,13 @@
 }
 
 .pkp_structure_head_localNav {
+
 	.sf-menu { 
+
 		a {
 			padding-right: 0.45em;
 		}
-	
+
 		a.sf-with-ul {
 			padding-right: 1.55em;
 		}
@@ -55,14 +60,15 @@
 			/** We use negative margin because we don't want to overwrite the top
 			 *  style defined in superfish.css.
 			 */
-			margin-top: -1px;
+			margin-top: -3px;
 		}
 	}
 }
 
 .pkp_structure_search {
-	padding: 5px 10px 0 0;
+	margin: 7px 10px 7px 0;
 	input {
+	    min-height: 19px;
 		border: 1px solid #ccc;
 		padding: 2px;
 		font-size: 100%;
@@ -70,11 +76,11 @@
 }
 
 .pkp_structure_breadcrumb {
-	margin-left: 20px;
+	margin: 12px 0 12px 20px;
 }
 
 .pkp_structure_breadcrumb li {
-	padding: 10px 6px 0 2px;
+	padding: 0 6px 0 2px;
 	font-size: 85%;
 	list-style-type: square;
 	list-style-position: inside;
