*7655* add 'large' option for FBV width

--- a/pkp-lib/styles/helpers.less
+++ b/pkp-lib/styles/helpers.less
@@ -101,6 +101,13 @@
 	border: 1px solid white;
 	content: " ";
 	display: block;
+
+.pkp_helpers_threeQuarter {
+	width: 70%;
+}
+
+.pkp_helpers_underline {
+	text-decoration: underline !important;
 }
 
 div.pkp_helpers_progressIndicator {
