*7651* Format sidebar block plugins

--- a/pkp-lib/styles/helpers.less
+++ b/pkp-lib/styles/helpers.less
@@ -97,18 +97,22 @@
 	width: 23%;
 }
 
-.pkp_helpers_underline:after {
-	border: 1px solid white;
-	content: " ";
-	display: block;
-}
-
 .pkp_helpers_threeQuarter {
 	width: 73%;
 }
 
 .pkp_helpers_underline {
 	text-decoration: underline !important;
+}
+
+.pkp_helpers_underline:after {
+	border-bottom: 1px solid white;
+	content: " ";
+	display: block;
+}
+
+.pkp_helpers_dotted_underline {
+	border-bottom: 1px dotted #999;
 }
 
 div.pkp_helpers_progressIndicator {
