--- a/pkp-lib/styles/structure/sidebar.less
+++ b/pkp-lib/styles/structure/sidebar.less
@@ -15,25 +15,47 @@
 }
 
 .pkp_structure_sidebar {
-	padding-top: 10px;
 	border-top: 1px dotted #999;
-	margin-right: 20px;
-
-	span.blockTitle {
-		font: 120% "Courier New",Courier,mono;
-		text-transform: uppercase;
-		color: #569bbe;
+	
+	div.block, div.block span.blockTitle {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	
+	div.block {
+		border-bottom: 1px dotted #999;
+		
+		span.blockTitle {
+			display:list-item;
+			list-style: disc inside;
+			color: #569BBE;
+			font: 120% "Courier New",Courier,mono;
+			text-transform: uppercase;
+			color: #569bbe;
+		}
+		
+		span.blockTitle:first-child {
+			padding-top: 0px;
+		}
+		
+		a {
+			text-decoration: none;
+		}
+		
+		a:hover {
+			text-decoration: none;
+		}
 	}
 }
 
 .pkp_structure_sidebar_left {
 	float: left;
 	width: 190px;
-	_margin-right: -3px;
+	margin-right: 20px;
 }
 
 .pkp_structure_sidebar_right {
 	float: right;
 	width: 190px;
-	_margin-left: -3px;
+	margin-left: 20px;
 }
