*7664* add style class for help

--- a/pkp-lib/styles/helpers.less
+++ b/pkp-lib/styles/helpers.less
@@ -115,6 +115,13 @@
 	border-bottom: 1px dotted #999;
 }
 
+.pkp_help {
+	color:#999999;
+	font-weight:normal;
+	font-size:80%;
+	padding:10px;
+}
+
 div.pkp_helpers_progressIndicator {
 	width:24px;
 	height:24px;
