*7649* Introduced new carousel plugin and delete old one

--- a/pkp-lib/styles/helpers.less
+++ b/pkp-lib/styles/helpers.less
@@ -122,6 +122,10 @@
 	padding:10px;
 }
 
+.pkp_helpers_black_bg {
+	background-color: black;
+}
+
 div.pkp_helpers_progressIndicator {
 	width:24px;
 	height:24px;
