--- a/pkp-lib/styles/form/form.less
+++ b/pkp-lib/styles/form/form.less
@@ -14,6 +14,12 @@
  */
 
 .pkp_form {
+	.pkp_formArea {
+		p {
+			margin: 0px;
+			padding: 0px;
+		}
+	}
 
 	.debug div, .debug label {
 		border: 1px solid orange;
