*7654* introduce 'manage' sprite from Chris

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -172,6 +172,9 @@ a.sprite {
 	
 	&.collapsed:before { margin-right:4px; background-position: -1488px 0; }
 	&.collapsed:hover:before { background-position: -1488px -24px; }
+
+	&.manage:before { margin-right:4px; background-position: -1512px 0; }
+	&.manage:hover:before { background-position: -1512px -24px; }
 	
 }
 
