--- a/pkp-lib/styles/structure/body.less
+++ b/pkp-lib/styles/structure/body.less
@@ -29,7 +29,8 @@ strong {
 hr {
 	border: 5px solid #e2e2e2;
 	border-width: 0 0 5px 0;
-	margin: 20px 10px 10px 10px;
+	margin-top: 20px;
+	margin-bottom: 10px;
 }
 
 h1, h2, h3, h4, h5, h6, ul, ol,dl, p,blockquote {
