--- a/pkp-lib/styles/structure/foot.less
+++ b/pkp-lib/styles/structure/foot.less
@@ -18,4 +18,11 @@
 .pkp_structure_subfoot {
 	border-top: 1px dotted #fff;
 	background-color: #c1bbaf;
+
+	ul li {
+		list-style: square;
+		margin: 0px 0px 8px 15px;
+		text-transform: uppercase;
+		font-family: "Courier New",Courier,mono;
+	}
 }
