*7648* Generalized progress indicator used by url in div handler

--- a/pkp-lib/styles/index.less
+++ b/pkp-lib/styles/index.less
@@ -27,6 +27,18 @@
 
 @import url("lib/pkp/styles/sprites.less");
 
+.loading_container {
+	text-align: center;
+	padding-top: 10px;
+ 
+	.pkp_helpers_progressIndicator {
+		margin-right: auto;
+		margin-left: auto;
+		float: none;
+		display: block;
+	}
+}
+
 .grid_actions {
 	padding: 22px 0 22px 0;
 	overflow: hidden;
