*7667* Grid styling and added more color to sprites

--- a/pkp-lib/styles/controllers/grid/grid.less
+++ b/pkp-lib/styles/controllers/grid/grid.less
@@ -51,12 +51,12 @@ div.pkp_controllers_grid {
 	}
 
 	thead th:first-child {
-		padding-left: 28px;
+		padding-left: 40px;
 	}
 
 	td {
 		text-align: center;
-		font-size: 85%;
+		font-size: 12px;
 		vertical-align: middle;
 		padding: 0px;
 	}
