--- a/pkp-lib/styles/controllers/modal.less
+++ b/pkp-lib/styles/controllers/modal.less
@@ -16,7 +16,8 @@
 .pkp_controllers_modal_titleBar {
 	height: 48px;
 	width: 100%;
-	margin: 10px 0 10px 0;
+	margin-top: 10px;
+	margin-right: 10px;
 	padding-bottom: 10px;
 	border-bottom: 1px solid #efefef;
 
@@ -52,4 +53,21 @@
 
 .ui-dialog .ui-tabs-panel {
 	padding: 0px;
+}
+
+.ui-widget-overlay {
+	background: #333333 50% 50% repeat-x;
+	opacity: 0.8;
+}
+
+.ui-dialog {
+	background-color: #f7f5f4;
+}
+
+.ui-dialog-content {
+	background-color: #ffffff !important;
+}
+
+.ui-dialog-buttonpane {
+	border-color: #f7f5f4;
 }
