*7660* adapt modal titles to Evoke spec

--- a/pkp-lib/styles/controllers/modal.less
+++ b/pkp-lib/styles/controllers/modal.less
@@ -21,10 +21,11 @@
 	padding-bottom: 10px;
 	border-bottom: 1px solid #efefef;
 
-	.h2 {
+	h2 {
 		margin-left: 20px;
 		line-height: 48px;
 		vertical-align: middle;
+		font-style: italic;
 	}
 
 	.close {
