--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -200,13 +200,14 @@ a.sprite {
 	content: " ";
 	width: 48px;
 	height: 48px;
-	margin-right: 20px;
+	margin-right: 10px;
+	margin-left: 10px;
 	float: left;
 	background: url(../lib/pkp/templates/images/structure/sprites.png);
 	background-repeat: no-repeat;
 	background-position: 0 -48px;
 
-	&.modal_add_user:before { background-position: -48px -48px; }
-	&.modal_add_role:before { background-position: -96px -48px; }
-	&.modal_add_file:before { background-position: -144px -48px; }
+	&.modal_add_user { background-position: -48px -48px; }
+	&.modal_add_role { background-position: -96px -48px; }
+	&.modal_add_file { background-position: -144px -48px; }
 }
