*7691* reuse 'wrench' sprite for press wizard

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -47,6 +47,9 @@ a.sprite {
 	&.participants:before { background-position: -314px 0; }
 	&.participants:hover:before { background-position: -314px -24px; }
 
+	&.wrench:before { background-position: -338px 0; }
+	&.wrench:hover:before { background-position: -338px -24px; }
+
 	&.notes:before { background-position: -264px 0; }
 	&.notes:hover:before { background-position: -264px -24px; }
 
