*7660* introduce modal icons (from Chris)

--- a/pkp-lib/styles/sprites.less
+++ b/pkp-lib/styles/sprites.less
@@ -213,4 +213,14 @@ a.sprite {
 	&.modal_add_user { background-position: -48px -48px; }
 	&.modal_add_role { background-position: -96px -48px; }
 	&.modal_add_file { background-position: -144px -48px; }
+	&.modal_information { background-position: -288px -48px; }
+	&.modal_more_info { background-position: -240px -48px; }
+	&.modal_email { background-position: -336px -48px; }
+	&.modal_delete { background-position: -384px -48px; }
+	&.modal_approve_proofs { background-position: -432px -48px; }
+	&.modal_edit { background-position: -480px -48px; }
+	&.modal_confirm { background-position: -528px -48px; }
+	&.modal_add_item { background-position: -576px -48px; }
+	&.modal_manage { background-position: -624px -48px; }
+	&.modal_wizard { background-position: -1632px -48px; }
 }
